# Stars

./: .gitignore  CMakeLists.txt  readme.md
cmake/: FindAtlas.cmake  FindGLEW.cmake  FindGLI.cmake  FindGLM.cmake
inc/: ArcCamera.hpp  CMakeLists.txt  Grid.hpp  Scene.hpp  Star.hpp  math.hpp
shaders/: CMakeLists.txt  ShaderPaths.hpp.in  basic.fs.glsl  basic.vs.glsl  point.fs.glsl  point.vs.glsl
src/: ArcCamera.cpp  CMakeLists.txt  Grid.cpp  Scene.cpp  Star.cpp  main.cpp
